<resources>
    <string name="app_name">Hi_News</string>
    <string name="todo">TODO</string>
    <string name="hi_news">Hi News</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string-array name="countries">
        <item>us</item>
        <item>eg</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="news">News</string>
    <string name="important_news">Important News</string>
    <string name="articles">Articles</string>
    <string name="ads_key">ca-app-pub-9851658657338441~1713506651</string>
    <string name="users">Users</string>
</resources>
